force-app/main/default/objects/task/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <defaultValue>Follow-up</defaultValue>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Follow-up</fullName>
                <default>true</default>
                <label>Follow-up</label>
            </value>
            <value>
                <fullName>Audit</fullName>
            </value>
            <value>
                <fullName>Cleanup</fullName>
            </value>
            <value>
                <fullName>Deployment</fullName>
            </value>
            <value>
                <fullName>Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>