force-app/main/default/objects/task/fields/Compliance_Flag__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Flag__c</fullName>
    <label>Compliance Flag</label>
    <type>Checkbox</type>
</CustomField>