force-app/main/default/objects/task/fields/Owner_Notification_Sent__c.field-meta.xml
<CustomField>
    <fullName>Owner_Notification_Sent__c</fullName>
    <label>Owner Notification Sent</label>
    <type>Checkbox</type>
</CustomField>