force-app/main/default/objects/task/fields/Review_Due__c.field-meta.xml
<CustomField>
    <fullName>Review_Due__c</fullName>
    <label>Review Due</label>
    <type>Checkbox</type>
</CustomField>